--- a/index.html
+++ b/index.html
@@ -423,4 +423,18 @@ Would happily work with him again, and would recommend him to any organisation l
     </main>
   </body>
   <script src="//dholmes.co.uk/js/main.js"></script>
+  
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-1263866-2', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+
 </html>
