--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <p>My name is Des Holmes, I’m a CTO with 20 years of experience.</p>
 
-<p>I help companies grow by hiring teams, defining digital strategies, rolling out development and delivery pipelines, and building products and services.</p>
+<p>I help companies grow by hiring teams, defining technical strategies, rolling out development and delivery pipelines, and building products and services.</p>
 
 <p>During my career I&rsquo;ve had the pleasure of working with the following brands: <a href="https://www.goldmansachs.com/">Goldman Sachs</a>, <a href="https://www.commerzbank.com/">Commerzbank</a>, <a href="https://home.kpmg.com/">KPMG</a>, <a href="https://www.bbc.co.uk/">BBC</a>, <a href="https://www.hsbc.co.uk/">HSBC</a>, <a href="https://www.jpmorgan.com/">JP Morgan</a>, <a href="https://www.db.com/">Deutsche Bank</a>, <a href="https://www.ey.com/">Ernst &amp; Young</a>, <a href="https://www.akzonobel.com/">Akzonobel</a>, <a href="https://www.sainsburys.co.uk/">Sainsbury’s</a>, <a href="https://www.rb.com/">Reckitt Benckiser</a>, <a href="https://www.heineken.co.uk/">Heineken</a>, <a href="https://pernod-ricard.com/">Pernod Ricard</a>, <a href="https://www.diageo.com/">Diageo</a>, <a href="https://www.adidas.co.uk/">Adidas</a>, <a href="https://www.nike.com/">Nike</a>, <a href="https://www.volkswagen.co.uk/">VWG</a>, <a href="https://hentsu.com">Hentsu</a>.</p>
 
@@ -61,60 +61,49 @@
 
 <h2 id="skills-and-knowledge">Skills and knowledge</h2>
 
-<h3 id="programming-query-languages">Programming, query languages</h3>
+<h3 id="programming-and-databases">Programming and DataBases</h3>
 
 <ul>
+<li><a href="https://www.python.org/">Python 2 &amp; 3</a> <a href="https://en.wikipedia.org/wiki/Object-oriented_programming">OOP (Object-Oriented_Programming)</a> and <a href="https://en.wikipedia.org/wiki/Functional_programming">Functional</a>
+
+<ul>
+<li><a href="https://www.djangoproject.com/">Django</a></li>
+<li><a href="https://flask.pocoo.org/">Flask</a></li>
+<li><a href="https://sanic.readthedocs.io/en/latest/">Sanic</a></li>
+</ul></li>
+<li><a href="https://databricks.com/">Databricks</a></li>
 <li><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>
 
 <ul>
 <li><a href="https://reactjs.org/">React</a></li>
 <li><a href="https://angular.io/">Angular</a> (<a href="https://www.typescriptlang.org/">TypeScript</a>)</li>
-<li><a href="https://jquery.com/">jQuery</a></li>
 </ul></li>
-<li><a href="https://en.wikipedia.org/wiki/HTML">HTML 4 &amp; 5 (HyperText Markup Language)</a></li>
-<li><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS 2 &amp; 3 (Cascading Style Sheets)</a></li>
-<li><a href="https://www.python.org/">Python 2 &amp; 3</a>
-
-<ul>
-<li><a href="https://flask.pocoo.org/">Flask</a></li>
-<li><a href="https://sanic.readthedocs.io/en/latest/">Sanic</a></li>
-</ul></li>
-<li><a href="https://php.net/">PHP 5</a> <a href="https://en.wikipedia.org/wiki/Object-oriented_programming">OOP (Object-Oriented_Programming)</a>
-
-<ul>
-<li><a href="https://laravel.com/">Laravel</a></li>
-<li><a href="https://ellislab.com/codeigniter">CodeIgnitor</a></li>
-<li><a href="https://cakephp.org/">CakePHP</a></li>
-</ul></li>
+<li><a href="https://en.wikipedia.org/wiki/HTML">HTML 4 &amp; 5 (HyperText Markup Language</a>)</li>
+<li><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS 2 &amp; 3 (Cascading Style Sheets</a>)</li>
 <li><a href="https://www.mysql.com/">MySQL</a></li>
-<li><a href="https://en.wikipedia.org/wiki/ActionScript">ActionScript 3</a></li>
-<li><a href="https://json.org/">JSON</a></li>
-<li><a href="https://geojson.org/">GeoJSON</a></li>
-<li><a href="https://en.wikipedia.org/wiki/XML">XML</a></li>
+<li><a href="https://www.postgresql.org/">PostgreSQL</a></li>
+<li><a href="https://www.mongodb.com/">MongoDB</a></li>
 </ul>
 
-<h3 id="hosting-provisioning-and-infrastructure-tools">Hosting, provisioning, and infrastructure tools</h3>
+<h3 id="hosting-provisioning-and-infrastructure">Hosting, provisioning, and infrastructure</h3>
 
 <ul>
-<li><a href="https://www.heroku.com/">Heroku</a></li>
-<li><a href="https://sloppy.io">Sloppy</a></li>
+<li><a href="https://www.docker.com">Docker</a></li>
+<li><a href="https://www.vagrantup.com/">Vagrant</a></li>
+<li><a href="https://www.virtualbox.org/">VirtualBox</a></li>
 <li><a href="https://azure.microsoft.com/en-us/">Microsoft Azure</a></li>
 <li><a href="https://aws.amazon.com/">AWS (Amazon Web Services)</a></li>
+<li><a href="https://www.heroku.com/">Heroku</a></li>
 <li><a href="https://www.rackspace.co.uk/cloud">Rackspace Cloud</a></li>
 <li>Linux flavours:
 
 <ul>
-<li><a href="https://www.redhat.com/">RedHat</a></li>
+<li><a href="https://alpinelinux.org/">Alpine Linux</a></li>
 <li><a href="https://www.centos.org/">CentOS</a></li>
 <li><a href="https://www.ubuntu.com/">Ubuntu</a></li>
-<li><a href="https://alpinelinux.org/">Alpine Linux</a></li>
 </ul></li>
-<li><a href="https://www.docker.com">Docker</a></li>
-<li><a href="https://www.vagrantup.com/">Vagrant</a></li>
-<li><a href="https://www.virtualbox.org/">VirtualBox</a></li>
 <li><a href="https://httpd.apache.org/">Apache web server</a></li>
 <li><a href="https://www.nginx.com/">Nginx</a></li>
-<li><a href="https://en.wikipedia.org/wiki/Content_delivery_network">CDN integration</a> (push and pull origins)</li>
 </ul>
 
 <h3 id="delivery-tools">Delivery tools</h3>
@@ -153,7 +142,8 @@
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Test-driven_development">TDD (Test-Driven Development)</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Behavior-driven_development">BDD (Behaviour-Driven Development)</a></li>
-<li><a href="https://phpunit.de/">PHPUnit</a></li>
+<li><a href="https://docs.pytest.org/en/latest/">Pytest</a></li>
+<li><a href="https://jestjs.io/">Jest</a></li>
 <li><a href="https://pivotal.github.io/jasmine/">Jasmine</a></li>
 </ul>
 
@@ -170,12 +160,10 @@
 <h3 id="development-methodologies-sdlc-https-en-wikipedia-org-wiki-systems-development-life-cycle">Development methodologies (<a href="https://en.wikipedia.org/wiki/Systems_development_life-cycle">SDLC</a>)</h3>
 
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/Waterfall_model">Waterfall</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Agile_software_development">Agile</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Software_prototyping">Prototyping</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Iterative_and_incremental_development">Iterative and Incremental development</a></li>
-<li><a href="https://en.wikipedia.org/wiki/Spiral_model">Spiral development</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Rapid_application_development">RAD (Rapid application development)</a></li>
-<li><a href="https://en.wikipedia.org/wiki/Extreme_programming">XP (Extreme programming)</a></li>
 </ul>
 
 <h4 id="development-ides-interactive-integrated-development-environments-https-en-wikipedia-org-wiki-integrated-development-environment">Development IDEs (<a href="https://en.wikipedia.org/wiki/Integrated_development_environment">Interactive/Integrated Development Environments</a>)</h4>
