--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 <ul>
 <li><a href="https://bitbucket.org/product/features/pipelines">Bitbucket Pipelines</a></li>
 <li><a href="https://www.atlassian.com/software/bamboo">Bamboo</a></li>
+<li><a href="https://azure.microsoft.com/en-us/services/devops/">Azure DevOps</a></li>
 <li><a href="https://travis-ci.org/">Travis CI</a></li>
 <li><a href="https://circleci.com/">CircleCI</a></li>
 <li><a href="https://jenkins-ci.org/">Jenkins</a></li>
-<li><a href="https://www.visualstudio.com/tfs/">TFS</a> (Team Foundation Server)</li>
 </ul></li>
 <li><a href="https://www.atlassian.com/software/jira">JIRA</a></li>
 <li><a href="https://www.atlassian.com/software/confluence">Confluence</a></li>
