--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h3 id="programming-and-databases">Programming and DataBases</h3>
 
 <ul>
-<li><a href="https://www.python.org/">Python 2 &amp; 3</a> <a href="https://en.wikipedia.org/wiki/Object-oriented_programming">OOP (Object-Oriented_Programming)</a> and <a href="https://en.wikipedia.org/wiki/Functional_programming">Functional</a>
+<li><a href="https://www.python.org/">Python 2 &amp; 3</a> <a href="https://en.wikipedia.org/wiki/Object-oriented_programming">OOP (Object-Oriented Programming)</a> and <a href="https://en.wikipedia.org/wiki/Functional_programming">Functional</a>
 
 <ul>
 <li><a href="https://www.djangoproject.com/">Django</a></li>
