--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
 <h3 id="programming-and-databases">Programming and DataBases</h3>
 
 <ul>
-<li><a href="https://www.python.org/">Python 2 &amp; 3</a> <a href="https://en.wikipedia.org/wiki/Object-oriented_programming">OOP (Object-Oriented Programming)</a> and <a href="https://en.wikipedia.org/wiki/Functional_programming">Functional</a>
+<li><a href="https://www.python.org/">Python</a> <a href="https://en.wikipedia.org/wiki/Object-oriented_programming">OOP (Object-Oriented Programming)</a> and <a href="https://en.wikipedia.org/wiki/Functional_programming">Functional</a>
 
 <ul>
 <li><a href="https://www.djangoproject.com/">Django</a></li>
 <li><a href="https://flask.pocoo.org/">Flask</a></li>
-<li><a href="https://sanic.readthedocs.io/en/latest/">Sanic</a></li>
 </ul></li>
 <li><a href="https://databricks.com/">Databricks</a></li>
 <li><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>
@@ -77,9 +76,14 @@
 <ul>
 <li><a href="https://reactjs.org/">React</a></li>
 <li><a href="https://angular.io/">Angular</a> (<a href="https://www.typescriptlang.org/">TypeScript</a>)</li>
+<li><a href="https://node.js.org">Node.js</a></li>
 </ul></li>
-<li><a href="https://en.wikipedia.org/wiki/HTML">HTML 4 &amp; 5 (HyperText Markup Language</a>)</li>
-<li><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS 2 &amp; 3 (Cascading Style Sheets</a>)</li>
+<li><a href="https://en.wikipedia.org/wiki/HTML">HTML (HyperText Markup Language</a>)</li>
+<li><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS (Cascading Style Sheets</a>)
+
+<ul>
+<li><a href="https://sass-lang.com/">SaSS</a></li>
+</ul></li>
 <li><a href="https://www.mysql.com/">MySQL</a></li>
 <li><a href="https://www.postgresql.org/">PostgreSQL</a></li>
 <li><a href="https://www.mongodb.com/">MongoDB</a></li>
@@ -92,7 +96,6 @@
 <li><a href="https://azure.microsoft.com/en-us/">Microsoft Azure</a></li>
 <li><a href="https://aws.amazon.com/">AWS (Amazon Web Services)</a></li>
 <li><a href="https://www.heroku.com/">Heroku</a></li>
-<li><a href="https://www.rackspace.co.uk/cloud">Rackspace Cloud</a></li>
 <li>Linux flavours:
 
 <ul>
@@ -130,7 +133,6 @@
 <ul>
 <li><a href="https://github.com/nvie/gitflow">git Flow</a></li>
 </ul></li>
-<li><a href="https://subversion.apache.org/">SVN (Subversion)</a></li>
 <li><a href="https://bitbucket.org/">Bitbucket</a></li>
 <li><a href="https://github.com/">GitHub</a></li>
 </ul>
@@ -141,6 +143,8 @@
 <li><a href="https://en.wikipedia.org/wiki/Test-driven_development">TDD (Test-Driven Development)</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Behavior-driven_development">BDD (Behaviour-Driven Development)</a></li>
 <li><a href="https://docs.pytest.org/en/latest/">Pytest</a></li>
+<li><a href="https://webdriver.io/">WebdriverIO</a></li>
+<li><a href="https://www.cypress.io/">Cypress</a></li>
 <li><a href="https://jestjs.io/">Jest</a></li>
 <li><a href="https://pivotal.github.io/jasmine/">Jasmine</a></li>
 </ul>
@@ -152,7 +156,6 @@
 <li><a href="https://en.wikipedia.org/wiki/Functional_specification">Functional specification</a> &amp; <a href="https://en.wikipedia.org/wiki/Software_architecture">Architecture</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Software_testing">Testing</a> &amp; <a href="https://en.wikipedia.org/wiki/Debugging">Debugging</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Software_deployment">Deployment</a></li>
-<li><a href="https://en.wikipedia.org/wiki/Software_maintenance">Maintenance</a></li>
 </ul>
 
 <h3 id="development-methodologies-sdlc-https-en-wikipedia-org-wiki-systems-development-life-cycle">Development methodologies (<a href="https://en.wikipedia.org/wiki/Systems_development_life-cycle">SDLC</a>)</h3>
@@ -162,15 +165,6 @@
 <li><a href="https://en.wikipedia.org/wiki/Software_prototyping">Prototyping</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Iterative_and_incremental_development">Iterative and Incremental development</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Rapid_application_development">RAD (Rapid application development)</a></li>
-</ul>
-
-<h4 id="development-ides-interactive-integrated-development-environments-https-en-wikipedia-org-wiki-integrated-development-environment">Development IDEs (<a href="https://en.wikipedia.org/wiki/Integrated_development_environment">Interactive/Integrated Development Environments</a>)</h4>
-
-<ul>
-<li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
-<li><a href="https://www.sublimetext.com/">Sublime Text</a></li>
-<li><a href="https://netbeans.org/">Netbeans</a></li>
-<li><a href="https://www.eclipse.org/">Eclipse</a> <a href="https://fdt.powerflasher.com/">FDT</a></li>
 </ul>
 
 <hr />
@@ -184,9 +178,10 @@
 <p>Key activities:</p>
 
 <ul>
-<li>Team management</li>
-<li>Global sales support</li>
-<li>Product design and development</li>
+<li>Building out Hentsū’s Product Development Team (on and offshore)</li>
+<li>Technical strategy for Hentsū’s SaaS products</li>
+<li>Case studies: <a href="https://hentsu.com/case-study-custom-research-platform-in-azure/">Serverless Research Environment</a></li>
+<li>Marketing: Re-host, Refactor or Rebuild? <a href="https://www.youtube.com/watch?v=0MB88AWH2Io">YouTube</a></a> &amp; <a href="https://hentsu.com/cloud-adoption-decision-making-rehost-refactor-or-rebuild/">Blog post</a></li>
 </ul>
 
 <p>Key technologies:</p>
