--- a/404.html
+++ b/404.html
@@ -34,7 +34,8 @@
 	  <div class="sidebar-about">
 		<a href="//dholmes.co.uk/"><h1>Hello!</h1></a>
 		<p class="lead">
-			<a href="https://www.linkedin.com/in/desholmes/">Des Holmes</a> - Data Science, DevOps, and Product Development.
+			<a href="https://www.linkedin.com/in/desholmes/">Des Holmes</a><br>
+			Product Development: SaaS, DevOps, Data Science, Public Cloud.
 		</p>
 	  </div>
   
