--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 	  <div class="sidebar-about">
 		<a href="//dholmes.co.uk/"><h1>Hello!</h1></a>
 		<p class="lead">
-			<a href="https://www.linkedin.com/in/desholmes/">Des Holmes</a><br>
+			<a href="https://www.linkedin.com/in/desholmes/">Des Holmes - CTO</a><br>
 			Product Development: SaaS, DevOps, Data Science, Public Cloud.
 		</p>
 	  </div>
