--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <h2 id="work-history">Work History</h2>
 
-<h3 id="hentsū-https-hentsu-com-dec-2018-now"><a href="https://hentsu.com/">Hentsū</a>, Dec 2018 - Now</h3>
+<h3 id="hentsū-https-hentsu-com-dec-2018-current"><a href="https://hentsu.com/">Hentsū</a>, Dec 2018 - current</h3>
 
 <p><strong>Co-CTO Product Development: SaaS, DevOps &amp; Data Science</strong>. Running Hentsu&rsquo;s global Product Development team.</p>
 
