--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <p>I&rsquo;m currently working at <a href="https://hentsu.com">Hentsū</a>, using Agile methodologies, Open Source and public cloud to develop SaaS, DevOps and Data Science products for Hedge Funds and Asset Managers.</p>
 
-<p><strong>Recent Technologies:</strong> <a href="https://www.docker.com">Docker</a>, <a href="https://reactjs.org/">React</a>, <a href="https://www.python.org/download/releases/3.0/">Python</a>, <a href="https://www.terraform.io/">Terraform</a>, <a href="https://azure.microsoft.com/en-us/">Azure</a>, <a href="https://databricks.com/">Databricks</a>.</p>
+<p><strong>Recent Technologies:</strong> <a href="https://reactjs.org/">React</a>, <a href="https://www.python.org/download/releases/3.0/">Python 3</a>, <a href="https://nodejs.org/en/">Node.js</a>, <a href="https://www.docker.com">Docker</a>, <a href="https://www.terraform.io/">Terraform</a>, <a href="https://azure.microsoft.com/en-us/">Azure</a>, <a href="https://databricks.com/">Databricks</a>.</p>
 
 <p>During my career I&rsquo;ve had the pleasure of working with the following brands: <a href="https://www.goldmansachs.com/">Goldman Sachs</a>, <a href="https://www.commerzbank.com/">Commerzbank</a>, <a href="https://home.kpmg.com/">KPMG</a>, <a href="https://www.bbc.co.uk/">BBC</a>, <a href="https://www.hsbc.co.uk/">HSBC</a>, <a href="https://www.jpmorgan.com/">JP Morgan</a>, <a href="https://www.db.com/">Deutsche Bank</a>, <a href="https://www.ey.com/">Ernst &amp; Young</a>, <a href="https://www.akzonobel.com/">Akzonobel</a>, <a href="https://www.sainsburys.co.uk/">Sainsbury’s</a>, <a href="https://www.rb.com/">Reckitt Benckiser</a>, <a href="https://www.heineken.co.uk/">Heineken</a>, <a href="https://pernod-ricard.com/">Pernod Ricard</a>, <a href="https://www.diageo.com/">Diageo</a>, <a href="https://www.adidas.co.uk/">Adidas</a>, <a href="https://www.nike.com/">Nike</a>, <a href="https://www.volkswagen.co.uk/">VWG</a>.</p>
 
@@ -68,7 +68,7 @@
 
 <p><strong>Co-CTO Product Development: SaaS, DevOps &amp; Data Science</strong>. Running Hentsu&rsquo;s global Product Development team.</p>
 
-<p>Key activities:</p>
+<p>Key Activities:</p>
 
 <ul>
 <li>Building out Hentsū’s Product Development Team (on and offshore)</li>
@@ -77,17 +77,17 @@
 <li>Marketing: Re-host, Refactor or Rebuild? <a href="https://www.youtube.com/watch?v=0MB88AWH2Io">YouTube</a></a> &amp; <a href="https://hentsu.com/cloud-adoption-decision-making-rehost-refactor-or-rebuild/">Blog post</a></li>
 </ul>
 
-<p>Key technologies:</p>
+<p>Key Technologies:</p>
 
 <ul>
-<li><a href="https://www.docker.com">Docker</a>, <a href="https://reactjs.org/">React</a>, <a href="https://www.apollographql.com/">Apollo GraphQL</a>, <a href="https://www.python.org/download/releases/3.0/">Python</a>, <a href="https://www.terraform.io/">Terraform</a>, <a href="https://azure.microsoft.com/en-us/">Azure</a>, <a href="https://databricks.com/">Databricks</a></li>
+<li><a href="https://reactjs.org/">React</a>, <a href="https://www.python.org/download/releases/3.0/">Python 3</a>, <a href="https://nodejs.org/en/">Node.js</a>, <a href="https://www.docker.com">Docker</a>, <a href="https://www.terraform.io/">Terraform</a>, <a href="https://azure.microsoft.com/en-us/">Azure</a>, <a href="https://databricks.com/">Databricks</a></li>
 </ul>
 
-<h3 id="hentsū-https-hentsu-com-nov-2017-dec-2018"><a href="https://hentsu.com/">Hentsū</a>, Nov 2017 – Dec 2018</h3>
+<h3 id="hentsū-https-hentsu-com-nov-2017-dec-2018"><a href="https://hentsu.com/">Hentsū</a>, Nov 2017 - Dec 2018</h3>
 
 <p><strong>Technical Consultant</strong>. Introduced a <a href="https://www.docker.com">dockerised</a> delivery pipeline, coordinated on and offshore teams to develop and deploy products and services using agile methodologies.</p>
 
-<p>Key activities:</p>
+<p>Key Activities:</p>
 
 <ul>
 <li>Defined the strategy for a <a href="https://en.wikipedia.org/wiki/Development,_testing,_acceptance_and_production">DTAP</a> delivery pipeline and workflows</li>
@@ -95,11 +95,11 @@
 <li>Design and development of fullstack applications</li>
 </ul>
 
-<h3 id="fathom-london-https-fathomlondon-com-nov-2015-nov-2017"><a href="https://fathomlondon.com/">Fathom London</a>, Nov 2015 – Nov 2017</h3>
+<h3 id="fathom-london-https-fathomlondon-com-nov-2015-nov-2017"><a href="https://fathomlondon.com/">Fathom London</a>, Nov 2015 - Nov 2017</h3>
 
 <p><strong>Technical Consultant</strong>. Using web technologies (incl. <a href="https://angular.io/">Angular</a>) to roll out platforms and applications (mobile &amp; desktop) for a range of Fathom’s global blue chip clients using agile methodologies.</p>
 
-<p>Key activities:</p>
+<p>Key Activities:</p>
 
 <ul>
 <li>Defining and refining delivery processes (<a href="https://github.com/">GitHub</a>, <a href="https://www.atlassian.com/software/jira">JIRA</a>, CI – <a href="https://travis-ci.com/">Travis</a>/<a href="https://www.visualstudio.com/tfs/">TFS</a>, QA)
@@ -113,13 +113,13 @@
 
 <hr />
 
-<h3 id="analogfolk-https-analogfolk-com-2012-nov-2015"><a href="https://analogfolk.com/">AnalogFolk</a>, 2012 – Nov 2015</h3>
+<h3 id="analogfolk-https-analogfolk-com-2012-nov-2015"><a href="https://analogfolk.com/">AnalogFolk</a>, 2012 - Nov 2015</h3>
 
 <p><strong>Creative Technical Director</strong>. An all-encompassing role centered around creative technology; leading and inspiring a team of talented developers to conceptualise, develop and deliver a wide range of projects.</p>
 
 <p>Noteworthy achievements include:</p>
 
-<p>Being 38th in the Sunday Times Tech Track 100:</p>
+<p>Being 38th in the <em>Sunday Times</em> Tech Track 100:</p>
 
 <blockquote>
 <p>Super news to share this morning. AnalogFolk has been named in The Sunday Times <a href="https://twitter.com/hashtag/TechTrack100?src=hash">#TechTrack100</a> <a href="https://t.co/iZZIDIn66U">https://t.co/iZZIDIn66U</a> <a href="https://t.co/qDxDseMoPK">pic.twitter.com/qDxDseMoPK</a>
@@ -142,7 +142,7 @@
 
 <hr />
 
-<h3 id="digit-https-digitlondon-com-2009-2012"><a href="https://digitlondon.com/">digit</a>, 2009 – 2012</h3>
+<h3 id="digit-https-digitlondon-com-2009-2012"><a href="https://digitlondon.com/">digit</a>, 2009 - 2012</h3>
 
 <p><strong>Creative Technical Director</strong>. An all-encompassing role centered around creative technology; leading and inspiring a team of talented developers to conceptualise, develop and deliver a wide range of projects using the following:</p>
 
